k8s/discovery-server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: discovery-server
  namespace: microservices
spec:
  replicas: 2
  selector:
    matchLabels:
      app: discovery-server
  template:
    metadata:
      labels:
        app: discovery-server
    spec:
      containers:
        - name: discovery-server
          image: saikiran8050/discovery-server:latest
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: discovery-server
  namespace: microservices
spec:
  selector:
    app: discovery-server
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
