k8s/ratings-data-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ratings-data-service
  namespace: microservices
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ratings-data-service
  template:
    metadata:
      labels:
        app: ratings-data-service
    spec:
      containers:
        - name: ratings-data-service
          image: saikiran8050/ratings-data-service:latest
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: ratings-data-service
  namespace: microservices
spec:
  selector:
    app: ratings-data-service
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
